--- a/src/main/webapp/pages/escala/cadastro-escala-formulario.xhtml
+++ b/src/main/webapp/pages/escala/cadastro-escala-formulario.xhtml
@@ -20,6 +20,8 @@
 				<p:inputText id="nomeEscala" size="50"
 					value="#{cadastroEscalaBean.escala.nome}" />
 				<p:message for="nomeEscala" />
+				<h:outputText value="Militares: " />
+<!--     			<p:pickList id="pickList" value="#{cadastroEscalaBean.militaresDual}" var="militar" itemLabel="#{militar}" itemValue="#{militar}" /> -->
 			</h:panelGrid>
 		</p:fieldset>
 		<p:commandButton id="botaoCancelar" value="Cancelar" immediate="true"
