Corrigido erro na persistencia de Escala

--- a/src/main/webapp/pages/escala/cadastro-escala-formulario.xhtml
+++ b/src/main/webapp/pages/escala/cadastro-escala-formulario.xhtml
@@ -21,7 +21,11 @@
 					value="#{cadastroEscalaBean.escala.nome}" />
 				<p:message for="nomeEscala" />
 				<h:outputText value="Militares: " />
-<!--     			<p:pickList id="pickList" value="#{cadastroEscalaBean.militaresDual}" var="militar" itemLabel="#{militar}" itemValue="#{militar}" /> -->
+				<p:selectCheckboxMenu id="menu"
+					value="#{cadastroEscalaBean.escala.militares}" label="militares" filter="true"
+					filterMatchMode="startsWith" panelStyle="width:250px">
+					<f:selectItems value="#{cadastroEscalaBean.militares}" var="militar" itemLabel="#{militar.nome}" itemValue="#{militar}" />
+				</p:selectCheckboxMenu>
 			</h:panelGrid>
 		</p:fieldset>
 		<p:commandButton id="botaoCancelar" value="Cancelar" immediate="true"
